<resources>
    <string name="app_name">SLM mobile</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="slmlogo">SLMLogo</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="ip">IP</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tap_to_update">Tap to check, Hold to update</string>
    <string name="authorization_req">Authorization required!</string>
    <string name="updates_available">updates available, Hold to update</string>
    <string name="error">Error!</string>
    <string name="checking...">Checking…</string>
    <string name="warning">Warning!</string>
    <string name="distro_warning_message">Couldn\'t detect distribution!
        Please choose your distribution in settings.</string>
    <string name="ok">OK</string>
    <string name="Connecting">Connecting…</string>
    <string name="Connected">Connected</string>
    <string name="Connection_failed">Connection Failed!</string>
    <string name="Connection_lost">Connection lost!</string>
    <string name="twice_to_quit">Press twice to quit</string>
    <string name="soon">SOON</string>
    <string name="authorised">Authorised</string>
    <string name="authorise">Authorise</string>
    <string name="enter">Enter</string>
    <string name="uname">Kernel</string>
    <string name="please_wait">Please wait...</string>
    <string name="hostname">Hostname</string>
    <string name="uptime">Uptime</string>
    <string name="cpu">CPU</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="ram">RAM</string>
    <string name="os">OS</string>
    <string name="virtualized">Virtualized</string>
    <string name="updates">Updates</string>
    <string name="remember_password">  Remember Password</string>
    <string name="simple_linux_manager">Simple Linux Manager</string>
    <string name="legal">Simple Linux Manager is a tool for managing common Linux server services, such as FTP, NFS, Samba, DNS, KVM, Docker as well as maintaining the server itself (backups, managing users etc.).</string>
    <string name="simple_linux_manager_about"><h2>Some legal stuff</h2><br><p>:-Selling app in any way is prohibited without appropriate agreement of Authors.</p></br><br><p>-Developers take no responsibility over the damage done to user\'s system by this app.</p></br><br><p>-SLM doesn\'t send any data but one needed by SSH connection to client\'s system.</p></br><br><p>Material icons created by Material</p></br></string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="usure">Are you sure?</string>
    <string name="pid_s">PID(s)</string>
    <string name="port_s">Port(s)</string>
    <string name="module">Module</string>
    <string name="set_hostname">Set Hostname</string>
    <string name="delete">Delete?</string>
    <string-array name="themes">
        <item>Light Gray</item>
        <item>Light Red</item>
        <item>Light Blue</item>
        <item>Black White</item>
    </string-array>
    <string-array name="vms_options_running">
        <item>Stop</item>
        <item>Restart</item>
        <item>Destroy</item>
    </string-array>
    <string-array name="vms_options_not_running">
        <item>Start</item>
    </string-array>
    <string-array name="pref_choose_distro">
        <item>Fedora</item>
        <item>SUSE</item>
        <item>Arch</item>
        <item>CentOS/RedHat</item>
        <item>Ubuntu</item>
        <item>Debian</item>
    </string-array>
    <string-array name="pref_choose_distro_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="backup_manager_filetype">
        <item>tar</item>
        <item>tar.gz</item>
        <item>tar.bz2</item>
        <item>tar.xz</item>
        <item>tar.lzma</item>
        <item>dar</item>
        <item>zip</item>
    </string-array>
    <string-array name="power_actions">
        <item>Reboot</item>
        <item>Shutdown</item>
    </string-array>
    <string-array name="services_options_uninstalled">
        <item>Install</item>
    </string-array>
    <string-array name="services_options_not_running">
        <item>Start</item>
        <item>Config</item>
        <item>Uninstall</item>
    </string-array>
    <string-array name="services_options_running">
        <item>Stop</item>
        <item>Restart</item>
        <item>Config</item>
    </string-array>
    <string-array name="samba_options_checkable">
        <item>browseable</item>
        <item>browsable</item>
        <item>writeable</item>
        <item>writable</item>
        <item>public</item>
        <item>read only</item>
        <item>read ok</item>
        <item>guest ok</item>
        <item>printable</item>
        <item>follow symlinks</item>
        <item>wide links</item>
        <item>guest only</item>
    </string-array>
    <string-array name="samba_options_writeable">
        <item>valid users</item>
        <item>comment</item>
        <item>path</item>
        <item>hosts allow</item>
        <item>hosts deny</item>
        <item>guest account</item>
        <item>create mask</item>
        <item>directory mask</item>
        <item>root preexec</item>
        <item>root postexec</item>
        <item>printer driver</item>
    </string-array>
    <string-array name="samba_spinner">
        <item>browseable</item>
        <item>writeable</item>
        <item>public</item>
        <item>read only</item>
        <item>read ok</item>
        <item>guest ok</item>
        <item>printable</item>
        <item>follow symlinks</item>
        <item>wide links</item>
        <item>guest only</item>
        <item>valid users</item>
        <item>comment</item>
        <item>path</item>
        <item>hosts allow</item>
        <item>hosts deny</item>
        <item>guest account</item>
        <item>create mask</item>
        <item>directory mask</item>
        <item>root preexec</item>
        <item>root postexec</item>
        <item>printer driver</item>
    </string-array>
    <string-array name="check_updates">
        <item>dnf check-update -q | awk \'NF\' | wc -l</item>                                                                                               
        <item>zypper list-updates | awk \'BEGIN{ found=0} /----/{found=1}  {if (found) print }\' | tail -n +2 | grep -v \'/var/mail/root\' | wc -l</item>   
        <item>pacman -Qu | wc -l</item>                                                                                                                     
        <item>yum check-update -q | awk \'NF\' | wc -l</item>                                                                                               
        <item>(apt update 2>&amp;1 | grep -v ^$ | grep -v ^WARNING) 2>&amp;1>/dev/null &amp;&amp; apt list --upgradable 2>&amp;1 | grep -v ^$ | grep -v ^WARNING | grep -v Listing | wc -l | tail -n1</item>                                                                          
        <item>(apt update 2>&amp;1 | grep -v ^$ | grep -v ^WARNING) 2>&amp;1>/dev/null &amp;&amp; apt list --upgradable 2>&amp;1 | grep -v ^$ | grep -v ^WARNING | grep -v Listing | wc -l | tail -n1</item>                                                                          
    </string-array>
    <string-array name="update_commands">
        <item>dnf -y update</item>          
        <item>zypper update -y</item>       
        <item>pacman -Syu --noconfirm</item>
        <item>yum -y update</item>          
        <item>apt -y upgrade</item>         
        <item>apt -y upgrade</item>         
    </string-array>
    <string-array name="apache_install_commands">
        <item>dnf install -y httpd php php-common</item>                        
        <item>zypper install -y apache2 php7 php7-pear apache2-mod_php7</item>  
        <item>pacman -S apache php-apache --noconfirm</item>                    
        <item>yum install -y httpd php php-common</item>                        
        <item>apt -y install apache2</item>                                     
        <item>apt -y install apache2</item>                                     
    </string-array>
    <string-array name="apache_uninstall_commands">
        <item>dnf remove -y httpd php php-common</item>                        
        <item>zypper remove -y apache2 php7 php7-pear apache2-mod_php7</item>  
        <item>pacman -R apache php-apache --noconfirm</item>                    
        <item>yum remove -y httpd php php-common</item>                        
        <item>apt -y remove apache2</item>                                     
        <item>apt -y remove apache2</item>                                     
    </string-array>
    <string-array name="docker_install_commands">
        <item>dnf install -y docker</item>          
        <item>zypper install -y docker</item>       
        <item>pacman -S docker --noconfirm</item>   
        <item>yum install -y docker</item>          
        <item>apt -y install docker</item>          
        <item>apt -y install docker</item>          
    </string-array>
    <string-array name="docker_uninstall_commands">
        <item>dnf remove -y docker</item>           
        <item>zypper remove -y docker</item>        
        <item>pacman -R docker --noconfirm</item>   
        <item>yum remove -y docker</item>           
        <item>apt -y remove docker</item>           
        <item>apt -y remove docker</item>           
    </string-array>
    <string-array name="ftp_install_commands">
        <item>dnf install -y vsftpd</item>          
        <item>zypper install -y vsftpd</item>       
        <item>pacman -S vsftpd --noconfirm</item>   
        <item>yum install -y vsftpd</item>          
        <item>apt -y install vsftpd</item>          
        <item>apt -y install vsftpd</item>          
    </string-array>
    <string-array name="ftp_uninstall_commands">
        <item>dnf remove -y vsftpd</item>           
        <item>zypper remove -y vsftpd</item>        
        <item>pacman -R vsftpd --noconfirm</item>   
        <item>yum remove -y vsftpd</item>           
        <item>apt -y remove vsftpd</item>           
        <item>apt -y remove vsftpd</item>           
    </string-array>
    <string-array name="samba_install_commands">
        <item>dnf install -y samba</item>          
        <item>zypper install -y samba</item>       
        <item>pacman -S samba --noconfirm</item>   
        <item>yum install -y samba</item>          
        <item>apt -y install samba</item>          
        <item>apt -y install samba</item>          
    </string-array>
    <string-array name="samba_uninstall_commands">
        <item>dnf remove -y samba</item>           
        <item>zypper remove -y samba</item>        
        <item>pacman -R samba --noconfirm</item>   
        <item>yum remove -y samba</item>           
        <item>apt -y remove samba</item>           
        <item>apt -y remove samba</item>           
    </string-array>
    <string-array name="nfs_install_commands">
        <item>dnf install -y nfs-utils</item>          
        <item>zypper install -y nfs-kernel-server</item>       
        <item>pacman -S nfs-utils --noconfirm</item>   
        <item>yum install -y nfs-utils</item>          
        <item>apt -y install nfs-server</item>          
        <item>apt -y install nfs-kernel-server</item>          
    </string-array>
</resources>